Fixed issues when button text was overflowing the modal on mobile. Also modal button section is always fixed at 250px in height now even when there's more or less items to fill the screen, because it when there was less items, then the items got hidden behind the on-screen keyboard on mobile.

--- a/src/index.css
+++ b/src/index.css
@@ -60,8 +60,9 @@ a {
 .ModalButtonSection {
   display: flex;
   flex-direction: column;
-  max-height: 250px;
+  height: 250px;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 /* The background blur of the modal */
@@ -394,6 +395,9 @@ a {
   outline: none;
   user-select: none;
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+  white-space: normal;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 
   &:hover {
     background-color: #3579a8;
